[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "boa"
version = "31.0"
authors = [
  { name="Harsha Addanki", email="harsha7addanki@gmail.com" },
]
description = "a replacement for conda"
readme = "README.md"
license = { file="LICENSE" }
requires-python = "=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "click==1.1.3",
    "npyscreen==4.10.5",
]


[project.urls]
"Source Code" = "https://github.com/Boa-Constrictor-DS/boa-package-manager"
"Bug Tracker" = "https://github.com/Boa-Constrictor-DS/boa-package-manager/issues"

